--- a/public/angular_app/view1/view1.html
+++ b/public/angular_app/view1/view1.html
@@ -1,1 +1,4 @@
-<p>Main view, maps and everything goes here</p>
+<div class="wrapper">
+  <p>Main view, maps and everything goes here</p>
+  <ui-gmap-google-map center='main.map.center' zoom='main.map.zoom'></ui-gmap-google-map>
+</div>
