--- a/public/angular_app/index.html
+++ b/public/angular_app/index.html
@@ -35,9 +35,11 @@
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="view1/shipmentFactory.js"></script>
+  <script src="view1/mapFactory.js"></script>
+  <script src="services/requestFactory.js"></script>
   <script src='bower_components/lodash/lodash.js'></script>
   <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.js'></script>
   <script src='bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
-  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 </body>
 </html>
