[STYLE] add info windows and icons

--- a/public/angular_app/view1/view1.html
+++ b/public/angular_app/view1/view1.html
@@ -1,7 +1,9 @@
 <div class="wrapper">
   <p>Main view, maps and everything goes here</p>
-  <ui-gmap-google-map center='main.map.center' zoom='main.map.zoom'>
+  <ui-gmap-google-map center='main.map.center' zoom='main.map.zoom' control='main.control'>
     <ui-gmap-markers models="main.markers" coords="'self'" icon="'icon'" events="main.mapObj.events">
+      <ui-gmap-windows show="show">
+      </ui-gmap-windows>
     </ui-gmap-markers>
   </ui-gmap-google-map>
 </div>
