[FEAT] added things

--- a/public/angular_app/view1/view1.html
+++ b/public/angular_app/view1/view1.html
@@ -1,6 +1,7 @@
-<div class="wrapper">
+<div class="middle">
   <p>Main view, maps and everything goes here</p>
   <ui-gmap-google-map center='main.map.center' zoom='main.map.zoom' control='main.control'>
+    
     <ui-gmap-markers models="main.markers" coords="'self'" icon="'icon'" events="main.events">
       <ui-gmap-windows show="show">
       </ui-gmap-windows>
