--- a/public/view1/view1.html
+++ b/public/view1/view1.html
@@ -3,8 +3,8 @@
   <div class="mapWrapper">
   <ui-gmap-google-map center='main.map.center' zoom='main.map.zoom' control='main.control'>
     <ui-gmap-markers models="main.markers" coords="'self'" icon="'icon'" events="main.events">
-      <ui-gmap-windows show="show">
-      </ui-gmap-windows>
+<!--       <ui-gmap-windows show="hide">
+      </ui-gmap-windows> -->
     </ui-gmap-markers>
     <ui-gmap-polyline ng-repeat="p in main.polylines" path="p.path" stroke="p.stroke" visible='p.visible'
                   geodesic='p.geodesic' fit="false" icons='p.icons'></ui-gmap-polyline>
