[Feature] Center title

--- a/public/view1/view1.html
+++ b/public/view1/view1.html
@@ -1,5 +1,5 @@
 <div class="middle">
-  <p>Main view, maps and everything goes here</p>
+  <h1>PackMan</h1>
   <div class="mapWrapper">
   <ui-gmap-google-map center='main.map.center' zoom='main.map.zoom' control='main.control'>
     <ui-gmap-markers models="main.markers" coords="'self'" icon="'icon'" events="main.events">
